Se actualizan fondos del about y contacto y textos.

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -8,7 +8,9 @@ permalink: /contact/
   
   <div class="container_contact">
   <h3 class="form_title">Send me message</h3>
+  <h3 class="form_title">celentebb@gmail.com (I can't promise i will reply, but i will read it for sure. Be concise.</h3>
 
+  <!--
   <form action="https://formspree.io/{{site.email}}" method="post" class="form">
     <div class="message js-form-message"></div>
     <div class="form_group">
@@ -27,5 +29,6 @@ permalink: /contact/
         <input type="submit" class="form_btn" value="Send">
     </div>
   </form>
+  -->
   </div>
 </section>
