--- a/_pages/about.html
+++ b/_pages/about.html
@@ -13,12 +13,13 @@ permalink: /about/
         <div class="author_info">
           <h2 class="author_title">{% if site.author-name %}{{site.author-name}}{% else %}Dwayne Newman{% endif %}</h2>
           <p class="author_subtitle">{% if site.about-author %}{{site.about-author}}{% else %}La croix godard blue bottle, vape iceland fingerstache cronut single-origin coffee lyft snackwave normcore small batch.{% endif %}</p>
-          <p class="author_subtitle">Brunch sustainable tote bag offal pitchfork, jean shorts readymade lomo poutine freegan sriracha palo santo fam hammock.</p>
+          <p class="author_subtitle">Find me in the game, maybe we can trade something. Ask first, I don't accept random friend requests, sorry.</p>
         </div>
       </div>
-
+<!--  Se comentan las redes sociales
       <div class="about_social">
         {% include social_footer.html %}
       </div>
+      -->
     </div> <!-- End Section Author -->
 </section>
