--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,7 +7,7 @@ permalink: /contact/
   <a href="{{site.baseurl}}/" class="button_back"><i class="fa fa-long-arrow-left" aria-hidden="true"></i> Back</a>
   
   <div class="container_contact">
-  <h3 class="form_title">Send me a message</h3></br>
+  <h3 class="form_title">Comments, suggestions, corrections, write me an email.</h3></br>
   <h3 class="form_title">celentebb@gmail.com </br>(I can't promise i will reply, but i will surely read it. Please be concise.)</h3>
 
   <!--
